--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">                     
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="#body">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About Us</a>
@@ -50,7 +50,7 @@
     <!-- End Of Second Navigation -->
 
     <!-- Page Header -->
-    <header class="header" id="home">
+    <header class="header" id="homesatu">
         <div class="overlay">
             <h1 class="subtitle">BIAK DEVELOPER</h1>
             <h1 class="title"></h1>  
@@ -120,15 +120,15 @@
                         memandu Anda mengeksplorasi keindahan alam dan budaya Indonesia. 
                         Terima kasih sudah berkunjung!
                     </p>
-                    <img src="https://i9.ytimg.com/vi/cdntiramFNg/maxresdefault.jpg?v=61a61ebc&sqp=CPiZ2aIG&rs=AOn4CLDC3HClG8f5IysJurUqDOBi4rfdFA" alt="" class="w-100 mt-3 shadow-sm">
+                    <img src="https://user-images.githubusercontent.com/59316805/236657178-6cad4a72-147e-4fe0-a32c-7a16ff6bf4bc.jpg" alt="" class="w-100 mt-3 shadow-sm">
                 </div>
                 <div class="col-md-6 pl-md-5">
                     <div class="row">
                         <div class="col-6">
-                            <img src="https://i9.ytimg.com/vi/AyprbzqKlCs/maxresdefault.jpg?v=5fa6b24a&sqp=CPiZ2aIG&rs=AOn4CLAR1Qk6m6Bwmh1vsU7rbO8POpTPGg" alt="" class="w-100 shadow-sm">
+                            <img src="https://user-images.githubusercontent.com/59316805/236657305-d939c9fd-3fc3-42d7-b2d6-eb6de4d97a5c.png" alt="" class="w-100 shadow-sm">
                         </div>
                         <div class="col-6">
-                            <img src="https://i9.ytimg.com/vi/ukLJCsHTR6A/maxresdefault.jpg?v=61b09cbd&sqp=CPiZ2aIG&rs=AOn4CLBDKFcpSi8hTnnH4Bqu9-s1pIuVew" alt="" class="w-100 shadow-sm">
+                            <img src="https://user-images.githubusercontent.com/59316805/236657280-13d08f52-66ce-4293-929a-b937e2f92761.png" alt="" class="w-100 shadow-sm">
                         </div>
                         <div class="col-12 mt-4">
                             <p>
@@ -153,148 +153,53 @@
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="section portfolio-section">
+        <h6 class="section-title text-center">Youtube</h6>
+        <a href="https://www.youtube.com/@BiakDeveloper"><h6 class="section-subtitle mb-5 text-center">Kunjungi Youtube  Kami</h6></a>
+        
+        <!-- Bagian Card -->
+
         <div class="container">
-            <h6 class="section-title text-center">Youtube Content</h6>
-            <a href="https://www.youtube.com/@BiakDeveloper"><h6 class="section-subtitle mb-5 text-center">Kunjungi Youtube  Kami</h6></a>
-            <div class="filters">
-                <a href="#" data-filter=".new" class="active">
-                    New
-                </a>
-                <a href="#" data-filter=".advertising">
-                    Alam
-                </a>
-                <a href="#" data-filter=".branding">
-                    Pantai
-                </a>
-                <a href="https://www.youtube.com/@BiakDeveloper" data-filter=".web">
-                    Diving
-                </a>
-            </div>
-            <div class="portfolio-container"> 
-                <div class="col-md-6 col-lg-4 web new">
-                    <div class="portfolio-item">
-                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/ukLJCsHTR6A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <!-- <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">WEB</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div>    -->
-                    </div>             
+            <div class="row">
+              <div class="col-sm-6 col-md-4 col-lg-4 mb-3">
+                <div class="card rounded">
+                    <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/ORa2neCRPa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">
+                        Melihat Jejak Perang Dunia II di Spot Diving Catalina Wreck di Biak Papua
+                    </p>
+                    <a href="https://www.youtube.com/watch?v=ORa2neCRPa4" class="btn btn-primary">Play Youtube</a>
+                  </div>
                 </div>
-                <div class="col-md-6 col-lg-4 web new">
-                    <div class="portfolio-item">
-                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/cdntiramFNg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <!-- <div class="content-holder">
-                            <a class="img-popup" href="https://user-images.githubusercontent.com/59316805/193287197-31346eb2-0870-4425-97e4-8576f687b521.png"></a>
-                            <div class="text-holder">
-                                <h6 class="title">WEB</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div>  -->
-                    </div>                         
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 mb-3">
+                <div class="card rounded">
+                    <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/ukLJCsHTR6A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <div class="card-body">
+                    <h5 class="card-title">Diving Pulau Rani</h5>
+                    <p class="card-text">
+                        Pulau Rani merupakan bagian dari wilayah Kabupaten Supiori, Distrik Kepulauan Aruri.
+                    </p>
+                    <a href="https://www.youtube.com/watch?v=ukLJCsHTR6A" class="btn btn-primary">Play Youtube</a>
+                  </div>
                 </div>
-                <div class="col-md-6 col-lg-4 advertising new">
-                    <div class="portfolio-item">
-                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/lUksTOe0tic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                         
-                        <!-- <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/advertising-2.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">ADVERSTISING</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div>     -->
-                    </div>              
-                </div> 
-                <div class="col-md-6 col-lg-4 web">
-                    <div class="portfolio-item">
-                        <iframe  class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/v0gb2HhOwog" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <!-- <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-4.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">WEB</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div> -->
-                    </div>                                                     
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 mb-3">
+                <div class="card rounded">
+                    <iframe  class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/rYeWqQVnTRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <div class="card-body">
+                    <h5 class="card-title">Pantai Bosnik Biak Papua</h5>
+                    <p class="card-text">
+                        Pantai Bosnik ini terletak di Desa Woniki, Kabupaten Biak Numfor. 
+                    </p>
+                    <a href="https://www.youtube.com/watch?v=rYeWqQVnTRs" class="btn btn-primary">Play Youtube</a>
+                  </div>
                 </div>
+              </div>
 
-                <div class="col-md-6 col-lg-4 advertising"> 
-                    <div class="portfolio-item">
-                        <iframe  class="embed-responsive-item embed-responsive embed-responsive-16by9"  width="560" height="315" src="https://www.youtube.com/embed/9TCf335mNtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <!-- <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/advertising-1.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">ADVERSITING</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div> -->
-                    </div>                                                       
-                </div> 
-                <div class="col-md-6 col-lg-4 web new">
-                    <div class="portfolio-item">
-                        <iframe  class="embed-responsive-item embed-responsive embed-responsive-16by9"  width="560" height="315" src="https://www.youtube.com/embed/0oDywEiqBY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
-                       <!-- <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">WEB</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div> -->
-                    </div>                                                     
+          
+        <!-- Akhir Bagian Card -->
                 </div>
-                <div class="col-md-6 col-lg-4 advertising new">
-                    <div class="portfolio-item">
-                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9"  width="560" height="315" src="https://www.youtube.com/embed/rYeWqQVnTRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>       
-                       <!-- <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/advertising-3.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">ADVERSITING</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div> -->
-                    </div>                                                       
-                </div> 
-
-                <div class="col-md-6 col-lg-4 branding new">
-                    <div class="portfolio-item">
-                        <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/9zthOgVxQaY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
-                        <!-- <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">BRANDING</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div> -->
-                    </div>                                                    
-                </div> 
-                <div class="col-md-6 col-lg-4 branding">
-                    <div class="portfolio-item">
-                        <img src="assets/imgs/branding-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
-                        <!-- <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
-                            <div class="text-holder">
-                                <h6 class="title">BRANDING</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div>
-                        </div> -->
-                    </div>                                                      
-                </div> 
-                <div class="col-md-6 col-lg-4 branding">
-                    <div class="portfolio-item">
-                        <img src="assets/imgs/branding-5.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
-                        <div class="content-holder">
-                            <a class="img-popup" href="assets/imgs/branding-5.jpg"></a>
-                            <!-- <div class="text-holder">
-                                <h6 class="title">BRANDING</h6>
-                                <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                            </div> -->
-                        </div>
-                    </div>                                                   
-                </div>
-            </div>   
-        </div>            
     </section>
     <!-- End of portfolio section -->
 
