--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="card rounded">
                     <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/ORa2neCRPa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                   <div class="card-body">
-                    <h5 class="card-title">Card Title</h5>
+                    <h5 class="card-title">Catalina Wreck</h5>
                     <p class="card-text">
                         Melihat Jejak Perang Dunia II di Spot Diving Catalina Wreck di Biak Papua
                     </p>
