--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + LeadMark main styles -->
 	<link rel="stylesheet" href="assets/css/leadmark.css">
+    <link rel="icon" href="assets/gambar/lg.png" type="image/x-icon">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
