--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     
     <!-- page Navigation -->
-    <nav class="navbar custom-navbar navbar-expand-md navbar-light fixed-top" data-spy="affix" data-offset-top="10">
+    <!-- <nav class="navbar custom-navbar navbar-expand-md navbar-light fixed-top" data-spy="affix" data-offset-top="10">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="#"> -->
                 <!-- <img src="assets/gambar/logo.png" alt=""> -->
-                BIAK DEVELOPER
-            </a>
+                <!-- BIAK DEVELOPER -->
+            <!-- </a>
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,13 +42,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Social Media</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item"> -->
                         <!-- <a href="components.html" class="ml-4 nav-link btn btn-primary btn-sm rounded">Components</a> -->
-                    </li>
+                    <!-- </li>
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
     <!-- End Of Second Navigation -->
 
     <!-- Page Header -->
@@ -164,7 +164,7 @@
             <div class="row">
               <div class="col-sm-6 col-md-4 col-lg-4 mb-3">
                 <div class="card rounded">
-                    <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/ORa2neCRPa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <img src="/assets/imgs/cattalina.png">
                   <div class="card-body">
                     <h5 class="card-title">Catalina Wreck</h5>
                     <p class="card-text">
@@ -176,7 +176,7 @@
               </div>
               <div class="col-sm-6 col-md-4 col-lg-4 mb-3">
                 <div class="card rounded">
-                    <iframe class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/ukLJCsHTR6A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <img src="/assets/imgs/monster.jpg">
                   <div class="card-body">
                     <h5 class="card-title">Diving Pulau Rani</h5>
                     <p class="card-text">
@@ -188,11 +188,11 @@
               </div>
               <div class="col-sm-6 col-md-4 col-lg-4 mb-3">
                 <div class="card rounded">
-                    <iframe  class="embed-responsive-item embed-responsive embed-responsive-16by9" width="560" height="315" src="https://www.youtube.com/embed/rYeWqQVnTRs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <img src="/assets/imgs/angga.jpg">
                   <div class="card-body">
-                    <h5 class="card-title">Pantai Bosnik Biak Papua</h5>
+                    <h5 class="card-title">Pantai Anggaduber</h5>
                     <p class="card-text">
-                        Pantai Bosnik ini terletak di Desa Woniki, Kabupaten Biak Numfor. 
+                        Pantai Anggaduber berjarak tempuh sekitar 50 menit perjalanan dari Kota Biak.
                     </p>
                     <a href="https://www.youtube.com/watch?v=rYeWqQVnTRs" class="btn btn-primary">Play Youtube</a>
                   </div>
