--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
     
     <!-- page Navigation -->
-    <!-- <nav class="navbar custom-navbar navbar-expand-md navbar-light fixed-top" data-spy="affix" data-offset-top="10">
+   <nav class="navbar custom-navbar navbar-expand-md navbar-light fixed-top" data-spy="affix" data-offset-top="10">
         <div class="container">
-            <a class="navbar-brand" href="#"> -->
-                <!-- <img src="assets/gambar/logo.png" alt=""> -->
-                <!-- BIAK DEVELOPER -->
-            <!-- </a>
+            <a class="navbar-brand" href="#">
+<!--              <img src="assets/gambar/logo.png" alt="">-->
+                 <h6>BIAK DEVELOPER</h6>
+            </a>
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">                     
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#body">Home</a>
                     </li>
@@ -41,13 +41,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Social Media</a>
                     </li>
-                    <li class="nav-item"> -->
-                        <!-- <a href="components.html" class="ml-4 nav-link btn btn-primary btn-sm rounded">Components</a> -->
-                    <!-- </li>
+                    <li class="nav-item">
+<!--                        <a href="components.html" class="ml-4 nav-link btn btn-primary btn-sm rounded">Components</a>-->
+                  </li>
                 </ul>
             </div>
         </div>
-    </nav> -->
+    </nav>
     <!-- End Of Second Navigation -->
 
     
@@ -203,6 +203,7 @@
         <!-- Akhir Bagian Card -->
                 </div>
     </section>
+
     <!-- End of portfolio section -->
 
     <!-- Blog Section -->
